--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
+    "framer-motion": "^4.1.17",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
