--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,22 +19,18 @@ services:
     container_name: api
     build: ./api/
     image: api
-    command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -b '0.0.0.0'"
+    command: bundle exec puma -C config/puma.rb
     tty: true
     stdin_open: true
     volumes:
       - ./api:/app:cached
       - bundle_data:/usr/local/bundle:cached
-      - /app/vendor
-      - /app/tmp
-      - /app/log
-      - /app/.git
+      - public-data:/app/public
+      - tmp-data:/app/tmp
     environment:
       TZ: Asia/Tokyo
     depends_on:
       - db
-    ports:
-      - 3000:3000
     networks:
       app_net:
         ipv4_address: '172.20.0.3'
@@ -42,12 +38,15 @@ services:
   nginx:
     build: ./nginx/
     volumes:
-      - public-data:/myapp/public
-      - tmp-data:/myapp/tmp
+      - public-data:/app/public
+      - tmp-data:/app/tmp
     ports:
       - 80:80
     depends_on:
       - api
+    networks:
+      app_net:
+        ipv4_address: '172.20.0.4'
 
 networks:
   app_net:
