--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,12 @@ services:
     image: mysql:5.7.30
     environment:
       TZ: Asia/Tokyo
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-    volumes:
-      - mysql_data:/var/lib/mysql
+      MYSQL_ROOT_PASSWORD: password
     ports:
       - 3307:3306
+    command: --default-authentication-plugin=mysql_native_password
+    volumes:
+    - mysql_data:/var/lib/mysql
     networks:
       app_net:
         ipv4_address: '172.20.0.2'
