--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,8 +14,11 @@ server {
   client_max_body_size 100m;
   error_page 404             /404.html;
   error_page 505 502 503 504 /500.html;
-  try_files  $uri/index.html $uri @app;
   keepalive_timeout 5;
+
+  location / {
+    try_files $uri @app;
+  }
 
   location @app {
     proxy_set_header X-Real-IP $remote_addr;
