--- a/api/config/database.yml
+++ b/api/config/database.yml
@@ -16,7 +16,7 @@ test:
 
 production:
   <<: *default
-  database: james_production
-  username: james
-  password: <%= ENV['JAMES_DATABASE_PASSWORD'] %>
-  host: <%= ENV['JAMES_DATABASE_HOST'] %>
+  database: <%= ENV["DATABASE_NAME"] %>
+  username: <%= ENV["DATABASE_USERNAME"] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: <%= ENV['DATABASE_HOST'] %>
