--- a/.github/workflows/deploy_api.yml
+++ b/.github/workflows/deploy_api.yml
@@ -32,7 +32,7 @@ jobs:
         ECR_REPOSITORY: james-app
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -f api/Dockerfile ../api -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker build -f api/Dockerfile ./api -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
