--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,9 +24,10 @@ jobs:
 
     - name: Setup Database
       run: |
-        cp api/config/database.yml.ci api/config/database.yml
+        cp config/database.yml.ci config/database.yml
         bundle exec rake db:create
         bundle exec rake db:schema:load
+      working-directory: ./api
       env:
         RAILS_ENV: test
 
