--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,13 +20,10 @@ jobs:
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
         working-directory: ./api
 
-    # - name: Install dependencies
-    #   run:  bundle install
-    #   working-directory: ./api
-
     - name: Setup Database
       run: |
         cp config/database.yml.ci config/database.yml
+        cat config/database.yml
         sudo /etc/init.d/mysql start
         bundle exec rake db:create
         bundle exec rake db:schema:load
