プルリクをトリガーとして、ciが走るかのテスト

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test
 
 on:
   push:
-    branches: main
+    branches: pull_request
 
 jobs:
   setup_and_test_execution:
@@ -23,7 +23,6 @@ jobs:
     - name: Setup Database
       run: |
         cp config/database.yml.ci config/database.yml
-        cat config/database.yml
         sudo /etc/init.d/mysql start
         bundle exec rake db:create
         bundle exec rake db:schema:load
